# static-opti

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
src/: embeded.rs  lib.rs  main.rs  worker.rs
