[package]
name = "static-opti"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["cli"]

[dependencies]
# Very fast deflate
libdeflater = "0.10"
# Brotli
brotli = "3.3"
# Fast hash
xxhash-rust = { version = "0.8", features = ["xxh3"] }
# Fast base 6n
base64 = "0.13"
# JSON
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
# Memory map
memmap2 = "0.5"
# Fast hash map
hashbrown = "0.12"
# Temporary file
tempfile = "3.3.0"
# Until Rust 1.63
crossbeam =  "0.8.2"

# Optimal size and perf
[profile.release]
opt-level = 3
lto = "thin"
