[package]
name = "static-opti"
version = "0.1.0"
edition = "2021"

[dependencies]
# Very fast deflate
libdeflater = "0.11"
# Brotli
brotli = "3.3"
# Fast hash
xxhash-rust = { version = "0.8", features = ["xxh3"] }
# Fast base 6n
base64 = "0.21"
# JSON
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
# Memory map
memmap2 = "0.5"
# Fast hash map
hashbrown = "0.13"
# Temporary file
tempfile = "3.3.0"
# Small and performant allocator
mimalloc = { version = "0.1", default-features = false }
# CLI utils
clap = { version = "4.0", features = ["derive"] }

# Optimal size and perf
[profile.release]
opt-level = 3
lto = "thin"
